[package]
name = "paw"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/paw"
documentation = "https://docs.rs/paw"
description = "CLI argument parser."
keywords = ["cli", "parser", "main", "macro"]
categories = ["command-line-interface", "command-line-utilities", "parsing", "rust-patterns"]
authors = ["The Rust CLI Working Group"]
readme = "README.md"
edition = "2018"

[dependencies]
paw-attributes = { path = "paw-attributes" }

[workspace]
members = [
  ".",
  "paw-attributes",
  "paw-clap",
]
