[package]
name = "paw"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/paw"
documentation = "https://docs.rs/paw"
description = "CLI argument parser."
keywords = ["cli", "parser", "main", "macro"]
categories = ["command-line-interface", "command-line-utilities", "parsing", "rust-patterns"]
authors = ["The Rust CLI Working Group"]
readme = "README.md"
edition = "2018"

[dependencies]
paw-attributes = { path = "paw-attributes", version = "1.0.0" }
paw-raw = { path = "paw-raw", version = "1.0.0" }

[dev-dependencies]
structopt = { version = "0.2.17", features = ["paw"] }
runtime = "0.3.0-alpha.2"

[workspace]
members = [
  ".",
  "paw-attributes",
  "paw-structopt",
  "paw-raw",
]
