[package]
name = "paw-attributes"
description = "Proc Macro attributes for the Paw crate."
version = "0.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-cli/paw"
homepage = "https://github.com/rust-cli/paw"
documentation = "https://docs.rs/paw-attributes"
authors = ["The CLI Working Group"]
keywords = ["paw", "parser", "cli", "macro", "proc-macro"]
categories = ["command-line-interface", "command-line-utilities", "parsing"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
quote = "0.6"
