[package]
name = "paw-attributes"
description = "Proc Macro attributes for the Paw crate."
version = "1.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-cli/paw"
homepage = "https://github.com/rust-cli/paw"
documentation = "https://docs.rs/paw-attributes"
authors = ["The CLI Working Group"]
keywords = ["paw", "parser", "cli", "macro", "proc-macro"]
categories = ["command-line-interface", "command-line-utilities", "parsing"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.2", features = ["nightly"] }
quote = "1.0.2"
